[package]
name = "serum-cpi"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "serum_cpi"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.25.0"
serum_dex = {version= "0.5.4",features = ["no-entrypoint"]}
anchor-spl= {version = "0.25.0"}


raydium-contract-instructions = {path="../../../raydium-contract-instructions/lib"}
